When submiting, the value of entryTextbox gets reseted. some modificatins on the CSS files for #entries

--- a/index.css
+++ b/index.css
@@ -33,3 +33,14 @@ body {
     padding: 5px 16px;
     margin-left: 76%;
 }
+
+#entries {
+     background: #16697A;
+     color: #EDE7E3;
+     font-family: cursive;
+     padding: 2em;
+     max-width: 20em;
+     border: unset;
+     border-radius: 25px;
+     margin-top: 1em;
+ }
