changed the padding to .entries-nav to space elements better.

--- a/index.css
+++ b/index.css
@@ -45,8 +45,11 @@ body {
      margin-top: 1em;
  }
 
- .display-entry-button {
+ .entries-nav {
      padding-bottom: 1em;
+ }
+
+ .display-entry-button {
      margin: 0.2em;
  }
  
